src/components/header/header.scss
@import '../../styles/styles.scss';

.main-header {
    display: flex;
    position: fixed;
    align-items: center;
    width: 100%;
    max-width: 1400px;
    z-index: 100;
    
    @media (min-width: 768px) {
        background: inherit;
        top: 62px;
        height: 40px;
    }
    @include phone {
        opacity: 0.95;
        top: 0;
        height: 80px;
        align-items: flex-start;
        
        &.header-leave {
            background-color: #1B252F;
        }
        /* Header animations for small screens */
        .nav-toggle:checked ~ nav {
            height: 100vh;
            transform: scale(1, 1);
            background-color: #1B252F;
        }
        .nav-toggle:checked ~ nav a {
            opacity: 1;
            transition: opacity 250ms ease-in-out;
        }
        .nav-toggle-label {
            position: absolute;
            top: 0;
            right: 31px;
            height: 100%;
            display: flex !important;
            align-items: center;
            z-index: 100;

            & > span,
            & > span:before,
            & > span:after {
                display: block;
                background: white;
                height: 3px;
                width: 17px;
                border-radius: 3px;
                position: relative;
            }
            & > span:before,
            & > span:after {
                content: '';
                position: absolute;
            }
            & > span:before {
                bottom: 7px;
                width: 26px;
            }
            & > span::after {
                top: 7px;
                width: 26px;
            }
        }
    }

    & > .header-max {
        width: 100%;
        @media (max-width: 767px) {}
        @media (min-width: 768px) {
            max-width: 1200px;
            display: flex;
            align-items: center;
            justify-content: space-between;
            margin: 0 auto;
        }

        & > a > .header-logo img {
            width: 148px;
            height: 24px;
            margin-left: 1.25em;
    
            @include phone {
                width: 124px;
                height: 21px;
                position: fixed;
                z-index: 100;
                margin-top: 30px;
            }
        }
    
        & > .nav-toggle,
        & > .nav-toggle-label {
            display: none;
        }
    }
    
    /* Header animations for large screens */
    @media (min-width: 768px) {
        &.header-initial {
            position: absolute;
            transition: transform 250ms ease;
            transform: translateY(-15px);
        }
        &.header-leave {
            transition: transform 250ms ease;
            transform: translateY(72px);
            position: fixed;
            height: 72px;
            background: #000000;
            opacity: .9;
            top: -72px;
    
            
            
        }
        
        &.header-enter {
            transition: transform 250ms ease;
            transform: translate(0,72px);
        }
    }
    
}

